# datachi

./: .env.example  .gitignore  BUILD_PLAN.md  CLAUDE.md  CONTEXT.md  DEMO_SCRIPT.md  HANDOFF.md  README.md  RUNBOOK.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py
db-init/: init.sql
docs/adr/: 0001-schema-delivery-via-prompt.md  0002-safe-sql-defense-in-depth.md  0003-chart-llm-spec-with-server-validation.md  0004-seed-anchor-date-and-determinism.md
scripts/: warm_cache.py
seed/: seed_demo_biz.py
src/: config.py  db.py  models.py  safe_sql.py
src/agent/: analyst.py  cache.py  charts.py  insights.py  prompts.py
src/api/: main.py
src/connectors/: base.py  demo.py  erpnext.py
src/ui/: app.py
tests/: conftest.py  test_agent.py  test_api.py  test_cache.py  test_charts.py  test_connectors.py  test_db.py  test_insights.py  test_safe_sql.py  test_saved_charts.py  test_ui.py
